# deep-research-agent-langgraph

./: .env.example  DESIGN.md  README.md  app.py  pyproject.toml
agent/: __init__.py  cli.py  extract.py  graph.py  prompts.py  search.py  state.py
examples/: sample_report.md
tests/: test_eval_quality.py  test_smoke.py
